# DrdoProject

./: README.md  read.txt  run_drdo_gazebo
ball_tracker/: CMakeLists.txt~  manifest.xml~  package.xml~
ball_tracker/src/: ball_tracker.cpp  ball_tracker.cpp~
cyton_gamma_1500/cyton_gamma_1500_setupassistant_andras2/launch/: moveit.rviz
cyton_gamma_1500/cyton_moveit/: .setup_assistant  CMakeLists.txt  package.xml
cyton_gamma_1500/cyton_moveit/config/: cyton_gamma_1500.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
cyton_gamma_1500/cyton_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
drdo_demo/scripts/: test.py
drdo_demo/src/: Q_learning.cpp  cluster_demo.cpp  drdo_demo.cpp  kmean_test.cpp  svm_demo.cpp
drdo_description/: CMakeLists.txt  package.xml
drdo_description/launch/: drdo.rviz  drdo_rviz.launch
drdo_description/urdf/: kinect.urdf.xacro  pioneer.xacro  range.gazebo.xacro  range.urdf.xacro
drdo_gazebo/: CMakeLists.txt
drdo_gazebo/launch/: drdo_world.launch
drdo_gazebo/worlds/: objects.world
drdo_pioneer/drdo_demo/: CMakeLists.txt  package.xml
drdo_pioneer/drdo_description/urdf/: pioneer.gazebo
drdo_pioneer/drdo_gazebo/: package.xml
drdo_pioneer/drdo_gazebo/worlds/: walled.sdf
drdo_pioneer/drdo_planning/: CMakeLists.txt  package.xml
drdo_pioneer/drdo_planning/src/: drdo_afford.cpp
drdo_pioneer/drdo_ros/src/: drdo_pid_controller.cpp
drdo_planning/src/: learn.cpp  svm_test.cpp
drdo_ros/: CMakeLists.txt  package.xml
erratic_teleop/: CMakeLists.txt  package.xml
erratic_teleop/src/: erratic_keyboard_teleop.cpp  keyboard.cpp~
experimentCode/: README.txt
experimentCode/LimClassifier/svmlight/: README.txt  manifest.xml
iitp3dx/iitp3dx_description/: CMakeLists.txt  package.xml
iitp3dx/iitp3dx_gazebo/: CMakeLists.txt  package.xml
iitp3dx/iitp3dx_gazebo/launch/: iitp3dx.launch
kinect_pcl/affordance_learning/: CMakeLists.txt  CMakeLists.txt~  package.xml
kinect_pcl/affordance_learning/src/: affordance_learning.cpp  affordance_learning.cpp~
kinect_pcl/depth_data_create/: CMakeLists.txt~  package.xml
kinect_pcl/depth_data_create/src/: depth_data_create.cpp
kinect_pcl/depth_data_timed/: CMakeLists.txt  package.xml
kinect_pcl/depth_data_timed/src/: depth_data_timed.cpp
kinect_pcl/image_converter/: CMakeLists.txt~  package.xml
kinect_pcl/image_converter/src/: image_converter.cpp
kinect_segmentation/: find_object_2d.txt~
labrob/: run_pioneer_gazebo  standup.sh
labrob/labrob_2dnav/: CMakeLists.txt  costmap_common_params.yaml  move_base.launch  package.xml
labrob/labrob_control/: CMakeLists.txt  CMakeLists.txt~  package.xml
labrob/labrob_control/config/: pioneer_controller_param.yaml
labrob/labrob_control/launch/: cyton_gamma_1500_control.launch  cyton_gamma_1500_control.launch~  (+1 more)
labrob/labrob_description/: CMakeLists.txt  package.xml
labrob/labrob_gazebo/: CMakeLists.txt  amcl_demo.launch  package.xml
labrob/labrob_moveit_generated/: .setup_assistant  CMakeLists.txt  package.xml
labrob/labrob_pioneer_ros/: CMakeLists.txt  package.xml
labrob/labrob_pioneer_ros/src/: labrob_pick_place.cpp  labrob_pioneer_odom_publisher.cpp  labrob_pioneer_pid_controller.cpp
labrob/labrob_world/: blocked_world.world  blocked_world.world~  objects_world.world
learn/learn_description/: CMakeLists.txt  package.xml
learn/learn_gazebo/: CMakeLists.txt  package.xml
pcl_demo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
pcl_demo/src/: Untitled Document  cluster_extraction.cpp  correspondence_grouping.cpp  example.cpp
pioneer_cyton_2dnav/: CMakeLists.txt  costmap_common_params.yaml  move_base.launch  package.xml  pioneer_cyton_base.launch  pioneer_cyton_nav.launch
pioneer_cyton_2dnav/include/: move_base.launch.xml
pioneer_cyton_control/: CMakeLists.txt  CMakeLists.txt~  package.xml
pioneer_cyton_control/config/: cyton_joint_position_control.yaml~
pioneer_cyton_control/launch/: cyton_gamma_1500_control.launch  cyton_gamma_1500_control.launch~  pioneer_cyton_control.launch
pioneer_cyton_description/: CMakeLists.txt  package.xml
pioneer_cyton_description/launch/: pioneer.rviz  pioneer_rviz.launch
pioneer_cyton_description/robot/: pioneer.gazebo.xacro  pioneer.urdf
pioneer_cyton_gazebo/: CMakeLists.txt  amcl_demo.launch  package.xml
pioneer_cyton_gazebo/config/: default_controllers.yaml  simple_grasping.yaml
pioneer_cyton_gazebo/launch/: demo.launch  pioneer_cyton_gmapping.launch  pioneer_cyton_world.launch  play.launch
pioneer_cyton_gazebo/launch/include/: pioneer_cyton.launch.xml
pioneer_cyton_gazebo/scripts/: demo.py  demo1.py  prepare_simulated_robot.py
pioneer_cyton_gazebo/src/: plugin.cpp
pioneer_cyton_moveit/: .setup_assistant  CMakeLists.txt  package.xml
pioneer_cyton_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  pioneer.srdf  sensors.yaml
pioneer_cyton_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  pioneer_moveit_controller_manager.launch.xml  pioneer_moveit_sensor_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pioneer_cyton_ros/: CMakeLists.txt  package.xml
pioneer_cyton_ros/src/: pioneer_cyton_odom_publisher.cpp  pioneer_cyton_pick_place.cpp  pioneer_cyton_pid_controller.cpp
pioneer_cyton_world/: blocked_world.world  objects_world.world  objects_world1.world
ros_python/beginner_tutorials/: CMakeLists.txt~  package.xml~
stage_controllers/world/: roomba-wander.world
(+58 files in other folders)
