<?xml version="1.0"?>
<package>
  <name>pioneer_cyton_gazebo</name>
  <version>0.7.1</version>
  <description>The pioneer_cyton_gazebo package</description>
  <maintainer email="hisham@todo.todo">hisham</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>robot_controllers</build_depend>
  <build_depend>robot_controllers_interface</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>pioneer_cyton_description</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>pioneer_cyton_description</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>fetch_description</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>robot_controllers</run_depend>
  <run_depend>robot_controllers_interface</run_depend>
  <run_depend>rgbd_launch</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  
  <run_depend>moveit_python</run_depend>
  <run_depend>simple_grasping</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
	<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
